--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "antd": "^3.23.5",
     "prop-types": "^15.7.2",
+    "pubsub-js": "^1.7.0",
     "react": "^16.10.1",
     "react-dom": "^16.10.1",
     "react-scripts": "3.1.2",
@@ -32,6 +33,7 @@
     ]
   },
   "devDependencies": {
+    "pubsub-js": "^1.7.0",
     "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2"
   }
