--- a/package.json
+++ b/package.json
@@ -8,14 +8,14 @@
     "pubsub-js": "^1.7.0",
     "react": "^16.10.1",
     "react-dom": "^16.10.1",
-    "react-scripts": "3.1.2",
+    "react-scripts": "^3.1.2",
     "redux": "^4.0.4"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+     "start": "react-app-rewired start",
+     "build": "react-app-rewired build",
+     "test": "react-app-rewired test",
+     "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -33,7 +33,12 @@
     ]
   },
   "devDependencies": {
+    "babel-plugin-import": "^1.12.2",
+    "customize-cra": "^0.8.0",
+    "less": "^3.10.3",
+    "less-loader": "^5.0.0",
     "pubsub-js": "^1.7.0",
+    "react-app-rewired": "^2.1.3",
     "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2"
   }
